<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editSumm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/edit_summa"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_info" />

    <CheckBox
        android:id="@+id/checkBoxAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_adress" />

    <CheckBox
        android:id="@+id/checkBoxPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_phone" />

    <CheckBox
        android:id="@+id/checkBoxCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_card" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn" />

</LinearLayout>
